--- a/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
+++ b/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
@@ -5,9 +5,9 @@
 :description: Install Infinite Scale using Docker Compose on a server for production use.
 
 // the folder to use for the example
-:ocis_wopi: ocis_wopi
+:ocis_wopi: ocis_full
 
-include::partial$multi-location/compose-version.adoc[]
+include::partial$multi-location/compose-version-rolling.adoc[]
 
 image:depl-examples/ubuntu-compose/ubuntu-basic-teaser-image.png[Teaser Image, width=650]
 
@@ -19,7 +19,7 @@ toc::[]
 
 {description} The aim of this guide is to be up and running as fast as possible using a deployment setup that includes *Infinite Scale and web office applications for document collaboration* for home usage or small businesses. It also uses valid certificates from Letsencrypt.
 
-NOTE: This guide references the latest production version of Infinite Scale.
+NOTE: This guide references the latest {version-type} version of Infinite Scale.
 
 == Requirements
 
@@ -35,7 +35,7 @@ This guide describes an installation of Infinite Scale based on Ubuntu LTS and d
 [NOTE]
 ====
 * Disk space +
-About 2.8GB of disk space is needed as you not only get Infinite Scale but also office packages for online collaboration and other required software to run this setup. 
+About 2.4GB of disk space is needed for the default enabled services as you not only get Infinite Scale but also office packages for online collaboration and other required software to run this setup. 
 
 * Memory +
 We recommend at minimum 4-6GB of memory. 
@@ -88,11 +88,5 @@ Note that this guide expects:
 
 include::partial$depl-examples/ubuntu-compose/shared-setup.adoc[tags=shared_1;shared_2]
 // tags=shared_1;hetzner_only_1;shared_2
-
-== Updating
-
-Note that this deploymment can only be updated within Infinite Scale v5.
-
-If a new Infinite Scale v5 version is available, just down the compose environment and bring it back up. Containers will update automatically and you can continue using Infinite Scale as usual.
 
 {empty} +
