--- a/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
+++ b/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
@@ -21,6 +21,8 @@ toc::[]
 
 NOTE: This guide references the latest production version of Infinite Scale.
 
+NOTE: With this setup, each deployment can only contain one instance of Infinite Scale.
+
 == Requirements
 
 === Hardware
