Apply suggestions from code review
Co-authored-by: Christian Richter <1058116+dragonchaser@users.noreply.github.com>

--- a/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-hetzner.adoc
+++ b/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-hetzner.adoc
@@ -25,7 +25,7 @@ NOTE: With the minimum configuration available on Hetzner, you can start with ab
 
 NOTE: This guide references the latest {version-type} version of Infinite Scale.
 
-NOTE: With this setup, each deployment can only contain one instance of Infinite Scale.
+NOTE: With this setup, each deployment only contains one instance of Infinite Scale.
 
 == Requirements
 
