--- a/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
+++ b/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
@@ -21,7 +21,7 @@ toc::[]
 
 NOTE: This guide references the latest {version-type} version of Infinite Scale.
 
-NOTE: With this setup, each deployment can only contain one instance of Infinite Scale.
+NOTE: With this setup, each deployment only contains one instance of Infinite Scale.
 
 == Requirements
 
